# rust_anoto_dots

./: Cargo.toml  LICENSE  README.md
anoto_dots/: Cargo.toml  bitmatrix.json  bitmatrix.txt
anoto_dots/src/: lib.rs  main.rs  persist.rs  plotting.rs
examples/: advanced_features.rs  basic_usage.rs
src/: anoto_sequences.rs  codec.rs  defaults.rs  exceptions.rs  helpers.rs  integer.rs  lib.rs
tests/: integration_tests.rs
